store and cart functionality

--- a/greatkart/templates/home.html
+++ b/greatkart/templates/home.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %}
+
+
+{% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
 
 
@@ -9,7 +12,7 @@
 <div class="container">
 
 <div class="intro-banner-wrap">
-	<img src="{% static 'images/banners/cover.jpg' %}" class="img-fluid rounded">
+	<img src="{% static 'images/banners/b.jpg' %}" class="img-fluid rounded">
 </div>
 
 </div> <!-- container //  -->
@@ -25,15 +28,15 @@
 	<h3 class="section-title">Popular products</h3>
 </header><!-- sect-heading -->
 
-	
+
 <div class="row">
 	{% for product in products %}
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="{{product.get_url}}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
+			<a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
 			<figcaption class="info-wrap">
-				<a href="{{product.get_url}}" class="title">{{ product.product_name }}</a>
-				<div class="price mt-1">${{ product.price }}</div> <!-- price-wrap.// -->
+				<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+				<div class="price mt-1">$ {{ product.price }}</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
@@ -51,4 +54,5 @@
 
 </body>
 </html>
+
 {% endblock %}
