--- a/greatkart/templates/accounts/dashboard.html
+++ b/greatkart/templates/accounts/dashboard.html
@@ -12,8 +12,9 @@
             <article class="card">
             <header class="card-header">
                 <strong class="d-inline-block mr-3">Logged in as:</strong>
-                <span>{{user.first_name}}</span>
+                <span>{{user.full_name}}</span>
             </header>
+
             <div class="card-body">
                 <div class="row"> 
                     <div class="col-md-6">
