review and rating

--- a/greatkart/templates/admin/admin_dashboard.html
+++ b/greatkart/templates/admin/admin_dashboard.html
@@ -180,7 +180,7 @@
             <h5 class="card-title mb-9 fw-semibold">PENDING COUNT: {{pending_count}} </h5>
             
            
-            <h3 class="fw-semibold mb-3 text-primary">TOTAL COUNT:{{ delivery_count|add:cancel_count|add:pending_count }}</h3>
+            <h3 class="fw-semibold mb-3 text-primary"></h3>
             
           </div>
           <div class="col-4">
@@ -264,12 +264,12 @@
 </div>
 </div>
 </section>
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.28.0/dist/apexcharts.min.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.28.0/dist/apexcharts.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> {% endcomment %}
 <script>
     // Function to get the current time
   // Function to get the current date and time
