--- a/greatkart/templates/admin/admin_login.html
+++ b/greatkart/templates/admin/admin_login.html
@@ -83,10 +83,10 @@
                 <p class="font-xs mb-30">All rights reserved</p>
             </footer>
         </main>
-        <script src="assets-admin/js/vendors/jquery-3.6.0.min.js"></script>
-        <script src="assets-admin/js/vendors/bootstrap.bundle.min.js"></script>
-        <script src="assets-admin/js/vendors/jquery.fullscreen.min.js"></script>
+        <script src="{% static "assets-admin/js/vendors/jquery-3.6.0.min.js" %}"></script>
+        <script src="{% static "assets-admin/js/vendors/bootstrap.bundle.min.js" %}"></script>
+        <script src="{% static "assets-admin/js/vendors/jquery.fullscreen.min.js" %}"></script>
         <!-- Main Script -->
-        <script src="assets-admin/js/main.js" type="text/javascript"></script>
+        <script src="{% static "assets-admin/js/main.js" type="text/javascript" %}"></script>
     </body>
 </html>
