--- a/greatkart/static/css/custom.css
+++ b/greatkart/static/css/custom.css
@@ -1,11 +1,11 @@
-/*Hide Radio button*/
-
+/* Hide Radio button */
 .rate>input {
     display: none;
 }
 
 .rate {
     display: inline-block;
+    ;
     border: 0;
 }
 
@@ -13,8 +13,7 @@
     float: right;
 }
 
-
-/*Showing the stars*/
+/* Showing the stars */
 .rate>label:before {
     display: inline-block;
     font-size: 1.1rem;
@@ -25,26 +24,44 @@
     cursor: pointer;
 }
 
-/*half star*/
-
+/* Half star */
 .rate .half:before {
     content: "\f089";
     position: absolute;
     padding-right: 0;
 }
 
-/*click and hover*/
+/* Click and hover */
 input:checked~label,
 label:hover~label {
     color: #ffb503;
 }
 
-
-/*hover highlight*/
-
+/* hover hightlight */
 input:checked+label:hover,
 input:checked~label:hover,
 input:checked~label:hover~label,
 label:hover~input:checked~label {
     color: #cc9000;
+}
+
+.rating-star i {
+    color: #ffb503 !important;
+}
+
+ul.thumb {
+    margin: 0 auto;
+    padding: 0;
+    float: left;
+}
+
+ul.thumb li {
+    list-style: none;
+    margin: 10px;
+}
+
+ul.thumb li img {
+    width: 80px;
+    height: 80px;
+    border: 1px solid grey;
 }
