--- a/greatkart/templates/accounts/dashboard.html
+++ b/greatkart/templates/accounts/dashboard.html
@@ -22,7 +22,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Total Orders</h5>
                                 <h4>{{orders_count}}</h4>
-                                <a href="">View Orders</a>
+                                <a href="{% url 'my_orders' %}">View Orders</a>
                             
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                     <div class="col-md-6">
                         <div class="card" style="text-align:center;">
                             <div class="card-body">
-                               <img src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg?w=826&t=st=1700284427~exp=1700285027~hmac=66fb268f2fdd71093f23f9ede48f357ebe0927874f0f8b56306bace0c8c2f2ce" alt="User profile picture" width="50" height="50" style="border-radius:50%;">
+                               <img src="{{userprofile.profile_picture.url}}" width="50" height="50" style="border-radius:50%;">
                                <p class="mb-0">{{user.email}}</p>
                                <p>{{user.phone_number}}</p>
                                
