--- a/greatkart/templates/admin/admin_base.html
+++ b/greatkart/templates/admin/admin_base.html
@@ -16,6 +16,7 @@
         <!-- Template CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href={%static 'assets-admin/css/main.css'%} rel="stylesheet" type="text/css" />
+        
     </head>
     <body>
         <div class="screen-overlay"></div>
@@ -37,20 +38,20 @@
                         </a>
                     </li>
                     <li class="menu-item ">
-                        <a class="menu-link" href="{% url 'product' %}">
+                        <a class="menu-link" href="{% url 'add_product' %}">
                             <i class="icon material-icons md-shopping_bag"></i>
                             <span class="text">Products</span>
                         </a>
                         
                     </li>
                     <li class="menu-item ">
-                        <a class="menu-link" href="#">
+                        <a class="menu-link" href="{% url 'categories' %}">
                             <i class="icon material-icons md-store"></i>
                             <span class="text">Categories</span>
                         </a>
                         
                     </li>
-                    <li class="menu-item has-submenu">
+                    {% comment %} <li class="menu-item has-submenu">
                         <a class="menu-link" href="">
                             <i class="icon material-icons md-stars"></i>
                             <span class="text">Variants</span>
@@ -60,11 +61,11 @@
                             <a href="#">Size</a>
                             <a href="#">Color</a>
                         </div>
-                    </li>
+                    </li> {% endcomment %}
                     
                     
                     <li class="menu-item">
-                        <a class="menu-link" href="#">
+                        <a class="menu-link" href="{% url 'usermanagement' %}">
                             <i class="icon material-icons md-person"></i>
                             <span class="text">User management</span>
                         </a>
@@ -77,9 +78,9 @@
                         </a>
                        
                     </li>
-                    <li class="menu-item">
+                    {% comment %} <li class="menu-item">
                         <a class="menu-link" href="#"> <i class="icon material-icons md-stars"></i> <span class="text">Offers</span> </a>
-                    </li>
+                    </li> {% endcomment %}
                     
                     <li class="menu-item">
                         <a class="menu-link" href="#">
@@ -87,12 +88,12 @@
                             <span class="text">Reviews</span>
                         </a>
                     </li>
-                    <li class="menu-item">
+                    {% comment %} <li class="menu-item">
                         <a class="menu-link" href="#">
                             <i class="icon material-icons md-local_offer"></i>
                             <span class="text">Coupons</span>
                         </a>
-                    </li>
+                    </li> {% endcomment %}
                     <li class="menu-item ">
                         <a class="menu-link" href="#">
                             <i class="icon material-icons md-monetization_on"></i>
@@ -127,7 +128,7 @@
                         <li class="nav-item">
                             <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
                         </li>
-                        <li class="dropdown nav-item">
+                        {% comment %} <li class="dropdown nav-item">
                             <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-notifications animation-shake"></i>
                                 <span class="badge rounded-pill">3</span>
                             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
@@ -136,17 +137,21 @@
                                 <a class="dropdown-item" href="#"><img src="{% static 'assets-admin/imgs/theme/flag-jp.png' %}" alt="Français" />日本語</a>
                                 <a class="dropdown-item" href="#"><img src="{% static 'assets-admin/imgs/theme/flag-cn.png' %}" alt="Français" />中国人</a>
                             </div>
-                        </li>
+                        </li> {% endcomment %}
+
+
                         <li class="dropdown nav-item">
                             <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="{% static 'assets-admin/imgs/people/avatar-2.png' %}" alt="User" /></a>
+                            {% comment %} <img class="img-xs rounded-circle" src="{% if userprofile.profile_picture %}{{ userprofile.profile_picture.url }}{% else %}{% static 'path/to/default-image.jpg' %}{% endif %}" alt="User" /> {% endcomment %}
+
                             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
-                                <a class="dropdown-item" href="#"><i class="material-icons md-perm_identity"></i>users</a>
-                                {% comment %} <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account Settings</a> {% endcomment %}
-                                <a class="dropdown-item" href="#"><i class="material-icons md-account_balance_wallet"></i>Dashboard</a>
+                                <a class="dropdown-item" href="{%url 'usermanagement' %}"><i class="material-icons md-perm_identity"></i>Users</a>
+                            <a class="dropdown-item" href="{% url 'edit_admin_profile' %}"><i class="material-icons md-settings"></i>Account Settings</a> 
+                                <a class="dropdown-item" href="{%url 'admin_dashboard'%}"><i class="material-icons md-account_balance_wallet"></i>Dashboard</a>
                                 <a class="dropdown-item" href="#"><i class="material-icons md-receipt"></i>Sales report</a>
                                 <a class="dropdown-item" href="#"><i class="material-icons md-help_outline"></i>Help center</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-danger" href="#"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                                <a class="dropdown-item text-danger" href="{%url 'admin_logout1'%}"><i class="material-icons md-exit_to_app"></i>Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -188,6 +193,10 @@
         <!-- Main Script -->
         <script src="{% static 'assets-admin/js/main.js' %}" type="text/javascript"></script>
         <script src="{% static 'assets-admin/js/custom-chart.js' %}" type="text/javascript"></script>
+       
+
+      
     </body>
 </html>
+
 
