--- a/greatkart/templates/admin/admin_base.html
+++ b/greatkart/templates/admin/admin_base.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="menu-item ">
-                        <a class="menu-link" href="{% url 'add_product' %}">
+                        <a class="menu-link" href="{% url 'products' %}">
                             <i class="icon material-icons md-shopping_bag"></i>
                             <span class="text">Products</span>
                         </a>
@@ -51,17 +51,17 @@
                         </a>
                         
                     </li>
-                    {% comment %} <li class="menu-item has-submenu">
+                    <li class="menu-item has-submenu">
                         <a class="menu-link" href="">
                             <i class="icon material-icons md-stars"></i>
                             <span class="text">Variants</span>
                         </a>
                         <div class="submenu">
-                            <a href="#">Variants list</a>
-                            <a href="#">Size</a>
-                            <a href="#">Color</a>
+                            <a href="{% url 'product_variant'%}">Variants list</a>
+                            <a href="{%url 'product_size' %}">Size</a>
+                            <a href="{%url 'product_color' %}">Color</a>
                         </div>
-                    </li> {% endcomment %}
+                    </li> 
                     
                     
                     <li class="menu-item">
@@ -193,6 +193,7 @@
         <!-- Main Script -->
         <script src="{% static 'assets-admin/js/main.js' %}" type="text/javascript"></script>
         <script src="{% static 'assets-admin/js/custom-chart.js' %}" type="text/javascript"></script>
+     
        
 
       
