--- a/greatkart/templates/category/category.html
+++ b/greatkart/templates/category/category.html
@@ -16,13 +16,13 @@
             </a>
         </div>
     </div>
-    {% comment %} <div class="card mb-4">
+    <div class="card mb-4">
         <header class="card-header">
             <div class="row gx-3">
                 <div class="col-lg-4 col-md-6 me-auto">
                     <div class="input-group">
                         <div class="form-outline">
-                            <form action="#" method="POST">
+                            <form action="{% url 'category_search' %}" method="POST">
                             {% csrf_token %}
                                 <div>
 
@@ -38,7 +38,7 @@
                 </div>
                 
                
-            </div> {% endcomment %}
+            </div>
         </header>
         <!-- card-header end// -->
         <div class="card-body">
@@ -70,76 +70,21 @@
                                     style="background-color: rgb(246, 250, 10); color:rgb(102, 94, 94)"
                                     data-bs-toggle="modal" data-bs-target="#confirmEdit{{forloop.counter}}"><i
                                         class="ti ti-edit"></i>
-                                    Edit
+                                    EDIT
                                 </button>
 
 
 
 
 
-                                <!--Edit Modal -->
-                                {% comment %} <div class="modal fade" id="confirmEdit{{forloop.counter}}" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
 
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h3 class="modal-title fs-5" id="exampleModalLabel">Edit Category</h3>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form method="POST" action="{% url 'editcategory' c.slug %}"
-                                                    enctype="multipart/form-data">
-                                                    {% csrf_token %}
-
-                                                    <div style="width: 100px;"
-                                                        class="card-header category-img position-relative overflow-hidden bg-transparent border p-0">
-                                                        <img class="img-fluid w-100" src="{{c.categories_image.url}} "
-                                                            alt="">
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <input name="image" type="file"
-                                                            accept="image/png, image/jpeg, image/svg"
-                                                            class="form-control" id="image-inputs" />
-                                                        <small id="image-errors"
-                                                            class="text-danger text-center"></small>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <input name='categories' value="{{c.categories}}" type="text"
-                                                            id="form3Example3cg" class="form-control form-control-lg" />
-                                                        <label class="form-label" for="form3Example3cg">Category
-                                                            name</label>
-                                                    </div>
-                                                    <div class="form-outline mb-4">
-                                                        <input name='categories_discription'
-                                                            value="{{c.categories_discription}}" type="text"
-                                                            id="form3Example3cg" class="form-control form-control-lg" />
-                                                        <label class="form-label"
-                                                            for="form3Example3cg">Description</label>
-                                                    </div>
-                                                    <div class="d-flex justify-content-center">
-                                                        <button type="submit"
-                                                            class="btn btn-primary btn-lg gradient-custom-4 w-50 text-light"
-                                                            type="submit">Save Changes</button>
-                                                    </div>
-
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div> {% endcomment %}
-
-                                <!-- Button trigger modal -->
-
-                                <button type="button" class="btn btn c"
-                                    style="background-color: rgb(239, 7, 54); color:rgb(255, 255, 255)"
-                                    data-bs-toggle="modal" data-bs-target="#exampleModal{{forloop.counter}}"><i
-                                        class="ti ti-trash"></i>
-                                    Delete
-                                </button>
+                                {% if c.is_available %}
+                                <!-- Delete action -->
+                                <a href="#" class="btn btn-md rounded font-sm bg-danger" onclick="openModal('confirmationModal{{ c.slug }}', 'Confirmation Delete item', 'delete')">Delete</a>
+                            {% else %}
+                                <!-- Add action -->
+                                <a href="#" class="btn btn-md rounded font-sm" onclick="openModal('confirmationModal{{ c.slug }}', 'Confirmation Add item', 'add')">Add</a>
+                            {% endif %}
                             </td>
                             <!-- Modal  for delete the Category -->
                             
@@ -164,7 +109,7 @@
                 <li class="page-item active">
                     <a class="page-link " href="?page={{product_page.paginator.num_pages}}"><i class="material-icons md-chevron_right"></i></a>
                 </li>
-            </ul> 
+            </ul>
         </nav>
     </div>
 </section>
@@ -212,34 +157,43 @@
         </div>
     </div>
 </div>
-{% for c in product_page %}
-<div class="modal fade" id="exampleModal{{forloop.counter}}" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Delete</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            delete Category {{c.category_name }}
-                                        </div>
-                                        <div class="modal-footer">
-                                            <!-- one here -->
-                                            <form action="{% url 'deletecategory' c.id %}">
+{% for c in categories %}
+<div id="confirmationModal{{ c.slug }}" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+           
+            <h4>Confirmation Block user</h4>
+        </div>
+        <div class="modal-body">
+            <h6 style="color: red">Are you sure Block this user?</h6>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" onclick="closeModal('confirmationModal{{ c.slug }}')">Cancel</button>
+            <a href="{% url 'deletecategory' c.slug %}">
+                <button type="button" class="btn btn-primary">Confirm</button>
+            </a>
+        </div>
+    </div>
+</div>
 
-                                                <button type="submit" class="btn btn"
-                                                    style="background-color: rgb(239, 7, 54); color:rgb(255, 255, 255)">Confirm</button>
-                                            </form>
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
+<script>
+    // Function to open the modal
+    function openModal(modalId, modalTitle, buttonLabel) {
+        var modal = document.getElementById(modalId);
+        var modalHeader = modal.querySelector(".modal-header");
+        var modalBody = modal.querySelector(".modal-body");
+        modalHeader.querySelector("h4").textContent = modalTitle;
+        modalBody.querySelector("h6").textContent = `Are you sure ${buttonLabel} this item?`;
+        
+        modal.style.display = 'block';
+    }
 
-                            </div>
-                            
+    // Function to close the modal
+    function closeModal(modalId) {
+        var modal = document.getElementById(modalId);
+        modal.style.display = 'none';
+    }
+</script>
 <div class="modal fade" id="confirmEdit{{forloop.counter}}" tabindex="-1"
 aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -251,9 +205,8 @@ aria-labelledby="exampleModalLabel" aria-hidden="true">
                     aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="POST" action="{% url 'edit_category' editcategory_id=c.id %}" enctype="multipart/form-data">
-
-
+                <form method="POST" action="{% url 'editcategory' c.slug %}"
+                    enctype="multipart/form-data">
                     {% csrf_token %}
 
                     <div style="width: 100px;"
